Fixed unclosed link tag, simplified component structure specifically main content plus footer, and aligned buttonbar

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,11 @@ main {
   outline: none; 
 }
 
+.btnBar {
+    display: flex; 
+    justify-content: center;
+}
+
 #map {
     width: 100%;
     height: 100vh;
